--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Faction History
-main: com.patrickmurphoto.factionhistory
+main: com.patrickmurphywebdesign.factionhistory
 version: 0.0.1
 website: http://www.patrickmurphwebdesign.com
 author: Patrick Murphy
